--- a/index.html
+++ b/index.html
@@ -6,34 +6,243 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abhinavv28</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/7e7e911dac.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles-mobile.css" media="only screen and (max-width: 600px)">
+
 </head>
 <body>
     <div id="header">
         <div class="container">
             <nav>
-                <img src="image/logo.png" alt="logo" class="logo">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Service</a></li>
-                    <li><a href="#">My work</a></li>
-                    <li><a href="#">Contact</a></li>
+                <ul id="sidemenu">
+                    <li><a href="#header">Home</a></li>
+                    <li><a href="#Service">Service</a></li>
+                    <li><a href="#portfolio">My work</a></li>
+                    <li><a href="#contact">Contact</a></li>
                     <li><a href="#">About</a></li>
                 </ul>
             </nav>
-            <div class = "header-text">
+            <div class="header-text">
                 <p>UI/UX Designer</p>
-                <h1>Hi myself <span>Abhinav</span></h1>
+                <h1>Hi, I'm <span>Abhinav</span></h1>
+                <p></p>
             </div>
         </div>
     </div>
-  <div id="about">
-    <div id="contianer">
-        <div id="row">
-            <div id="about-col-1">
+    <div id="about">
+        <div class="container">
+            <div class="row">
+                <div class="about-col-1">
+                    <img src="image/profile image.jpg" alt="Profile Image">
+                </div>
+                <div class="about-col-2">
+                    <h1 class="sub-title">About Me</h1>
+                    <p>"Hi, I'm Abhinav, a passionate graphic designer, UI/UX expert, and logo creator with over 2.5 years of 
+                        experience. I specialize in transforming ideas into captivating visuals that resonate with audiences and elevate
+                         brands. From sleek digital interfaces to memorable logos, my designs are driven by creativity and precision."</p>
+                    <div class="tab-title">
+                        <p class="tab-links active-link" onclick="openTab('skills')">skills</p>
+                        <p class="tab-links" onclick="openTab('experience')">Experience</p>
+                        <p class="tab-links" onclick="openTab('works')">Works</p>
+                    </div>
+                    <div class="tab-contents active-tab" id="skills">
+                        <ul>
+                            <li><span>Graphic Design</span><br>Designing web app interfaces</li>
+                            <li><span>UI/UX Design</span><br>Web app development</li>
+                            <li><span>Logo Design</span><br>Building Android and iOS apps</li>
+                        </ul>
+                    </div>
+                    <div class="tab-contents" id="experience">
+                        <ul>
+                            <li><span>2021 - Current</span><br>Designing web app interfaces</li>
+                            <li><span>2023 - Current</span><br>Web app development</li>
+                            <li><span>2023 - Current</span><br>Building Android and iOS apps</li>
+                        </ul>
+                    </div>
+                    <div class="tab-contents" id="works">
+                        <ul>
+                            <li><span>UI/UX</span><br>Designing web app interfaces</li>
+                            <li><span>Web Development</span><br>Web app development</li>
+                            <li><span>App Development</span><br>Building Android and iOS apps</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% -->
+    <div id="Service">
+        <div class="container">
+            <h1 class="sub-title">My Service</h1>
+            <div class="Services-list">
+                <div>
+                    <i class="fa-solid fa-code"></i>
+                    <h2>Logo Design</h2>
+                    <p>Craft custom logos that establish a strong visual identity for your brand. From minimalist designs to intricate details, I ensure your logo represents your brand's essence.</p>
+                    <a href="#">Learn more</a>
+                </div>
+                <div>
+                    <i class="fa-brands fa-figma"></i>
+                    <h2>App Design</h2>
+                    <p>Design intuitive and aesthetically pleasing mobile and web app interfaces</p>
+                    <a href="#">Learn more</a>
+                </div>
+                <div>
+                    <i class="fa-solid fa-pen"></i>
+                    <h2>UI/UX Design</h2>
+                    <p>Create visually captivating posters for events, promotions, or campaigns. Each design is tailored to communicate your message effectively and attractively.</p>
+                    <a href="#">Learn more</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- my worrkkkkkkkkkkkkk -->
+    <div id="portfolio">
+        <div class="container">
+            <h1 class="sub-title">My work</h1>
+            <h2 class="subsamall-title">Subtitle Here</h2>
+            <div class="work-list">
+                <div class="work">
+                    <img src="image/brand poster.png" >
+                    <div class="layer">
+                        <h3>Social Media App</h3>
+                        <p>The app connects you yo the talented people around the world.
+                           Download it from play store.</p>
+                        <a href="#"><i class="fa-solid fa-link"></i></a>
+                    </div>                    
+                </div>
+                <div class="work">
+                    <img src="image/blue berry poster.png" >
+                </div>
+                <div class="work">
+                    <img src="image/poster3.jpg" >
+                </div>
+                <div class="work">
+                    <img src="image/poster4.jpg" >
+                </div>
+                <div class="work">
+                    <img src="image/poster5.jpg" >
+                </div>
+                <div class="work">
+                    <img src="image/poster6.jpg" >
+                </div>
+                <div class="work">
+                    <img src="image/poster7.jpg" >
+                </div>
+                <div class="work">
+                    <img src="image/poster8.jpg" >
+                </div>
+                <div class="work">
+                    <img src="image/poster8.jpg" >
+                </div>
+                <div class="work">
+                    <img src="image/poster8.jpg" >
+                </div>
+                <div class="work">
+                    <img src="image/poster8.jpg" >
+                </div>
+                <div class="work">
+                    <img src="image/poster8.jpg" >
+                </div>
+                <div>
+     </div>
+</div>
+<a href="https://www.instagram.com/agraphicart02/" class ="btn">See more</a>
+    <!--contact ________________________ -->
+    <div id="contact"></div>
+    <div class="container"> 
+        <h1 class="sub-title">Contact</h1>
+        <div class="row">
+            <div class="contact-left">
+                <h1 class="sub-title"></h1>
+                <p><i class="fa-regular fa-paper-plane"></i>   abhinavbirajdar@gmail.com</p>
+                <p><i class="fa-solid fa-phone"></i>   9322893520</p>
+                <div class="social-icon">
+                    <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://x.com/"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+                    <a href=""><i class="fa-brands fa-whatsapp"></i></a>
+                </div>
                 
+                <a href="pdf/New Tab.pdf" download class ="btn btn2">Download CV</a>
             </div>
+            <div class="contact-right">
+                <form name="submit-to-google-sheet">
+                    <input type="text" Name = "name" placeholder = " Your name" required>
+                    <input type="email" Name = "email" placeholder = " Your Email" required>
+                    <textarea name="Message" row="6" placeholder="your Message"></textarea>
+                    <button type="submit" class="submit-btn">Submit</button>
+
+                </form>
+                <span id="msg"></span>
+            </div>
+            </div> 
+            <div class=" copyright">
+            <p>-------------abhinavbirajdar <i class="fa-solid fa-heart"></i> ---------------</p>
+        </div>
         </div>
     </div>
-  </div>
+    <script>
+        function openTab(tabName) {
+            let tablinks = document.getElementsByClassName("tab-links");
+            let tabcontents = document.getElementsByClassName("tab-contents");
+            for (let link of tablinks) {
+                link.classList.remove("active-link");
+            }
+            for (let content of tabcontents) {
+                content.classList.remove("active-tab");
+            }
+            document.getElementById(tabName).classList.add("active-tab");
+            event.currentTarget.classList.add("active-link");
+        }
+    </script>
+    <script>
+        var sidemenu = document.getElementById("sidemenu");
+        function openmenu (){
+            sidemenu.style.right = "0";
+        }
+        function openmenu (){
+            sidemenu.style.right = "-200px";
+            
+        }
+    </script>
+    <script>
+        const scriptURL = '<https://script.google.com/macros/s/AKfycbygftR7evJ9pXG8KrcMxgNybNXGXkn-IsLjZEAT04in8Pb4KDoxEyGDem2lIrEUoiv0/exec>'
+        const form = document.forms['submit-to-google-sheet']
+      const msg =document.getElementById("msg")
+        form.addEventListener('submit', e => {
+          e.preventDefault()
+          fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+    .then(response => {
+        msg.innerHTML = "Message sent successfully";
+        setTimeout(function() {
+            msg.innerHTML = "";
+        }, 5000);
+    })
+    .catch(error => console.error('Error!', error.message));
+})
+      </script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.waves.min.js"></script>
+      <script>
+      var setVanta = ()=>{
+      if (window.VANTA) window.VANTA.WAVES({
+        el: ".s-page-1 .s-section-1 .s-section",
+        mouseControls: true,
+        touchControls: true,
+        gyroControls: false,
+        minHeight: 200.00,
+        minWidth: 200.00,
+        scale: 1.00,
+        scaleMobile: 1.00,
+        color: 0x885500
+      })
+      }
+      _strk.push(function() {
+        setVanta()
+        window.edit_page.Event.subscribe( "Page.beforeNewOneFadeIn", setVanta )
+      })
+      </script>
 </body>
 </html>
