html second pagechanges

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/7e7e911dac.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles-mobile.css" media="only screen and (max-width: 600px)">
-
 </head>
 <body>
     <div id="header">
@@ -77,78 +76,79 @@
             <div class="Services-list">
                 <div>
                     <i class="fa-solid fa-code"></i>
-                    <h2>Logo Design</h2>
+                    <h2>App Design</h2>
                     <p>Craft custom logos that establish a strong visual identity for your brand. From minimalist designs to intricate details, I ensure your logo represents your brand's essence.</p>
                     <a href="#">Learn more</a>
                 </div>
                 <div>
                     <i class="fa-brands fa-figma"></i>
-                    <h2>App Design</h2>
+                    <h2>UI/UX Design</h2>
                     <p>Design intuitive and aesthetically pleasing mobile and web app interfaces</p>
                     <a href="#">Learn more</a>
                 </div>
                 <div>
-                    <i class="fa-solid fa-pen"></i>
-                    <h2>UI/UX Design</h2>
+                    <i class="fa-solid fa-object-group"></i>
+                    <h2>Web Design</h2>
                     <p>Create visually captivating posters for events, promotions, or campaigns. Each design is tailored to communicate your message effectively and attractively.</p>
                     <a href="#">Learn more</a>
                 </div>
             </div>
         </div>
     </div>
-    <!-- my worrkkkkkkkkkkkkk -->
+    <!-- my worrkkkkkkkkkkkkk%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% -->
     <div id="portfolio">
         <div class="container">
             <h1 class="sub-title">My work</h1>
-            <h2 class="subsamall-title">Subtitle Here</h2>
+            <h2 class="subsamall-title">poster Design</h2>
             <div class="work-list">
                 <div class="work">
-                    <img src="image/brand poster.png" >
-                    <div class="layer">
+                    <img src="image/GANESHME.jpg" >
+                    <!-- <div class="layer">
                         <h3>Social Media App</h3>
                         <p>The app connects you yo the talented people around the world.
                            Download it from play store.</p>
                         <a href="#"><i class="fa-solid fa-link"></i></a>
-                    </div>                    
+                    </div>                     -->
                 </div>
                 <div class="work">
-                    <img src="image/blue berry poster.png" >
+                    <img src="image/Poster2.jpg" >
+                </div>
+                <div class="work">
+                    <img src="image/mind poster.png" >
                 </div>
                 <div class="work">
                     <img src="image/poster3.jpg" >
                 </div>
                 <div class="work">
-                    <img src="image/poster4.jpg" >
+                    <img src="image/shoes poster 1.png" >
                 </div>
                 <div class="work">
-                    <img src="image/poster5.jpg" >
-                </div>
-                <div class="work">
-                    <img src="image/poster6.jpg" >
+                    <img src="image/poster11.jpg" >
                 </div>
                 <div class="work">
                     <img src="image/poster7.jpg" >
                 </div>
                 <div class="work">
-                    <img src="image/poster8.jpg" >
+                    <img src="image/poster6.jpg" >
                 </div>
                 <div class="work">
                     <img src="image/poster8.jpg" >
                 </div>
                 <div class="work">
-                    <img src="image/poster8.jpg" >
+                    <img src="image/poster13.jpg" >
                 </div>
                 <div class="work">
-                    <img src="image/poster8.jpg" >
+                    <img src="image/poster1.jpg" >
                 </div>
                 <div class="work">
-                    <img src="image/poster8.jpg" >
+                    <img src="image/black blue.png" >
                 </div>
                 <div>
      </div>
 </div>
-<a href="https://www.instagram.com/agraphicart02/" class ="btn">See more</a>
-    <!--contact ________________________ -->
+
+<a href="work1.html" class ="btn">See more</a>
+    <!-- %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% contact %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% -->
     <div id="contact"></div>
     <div class="container"> 
         <h1 class="sub-title">Contact</h1>
